--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
